--- a/jhipster/package.json
+++ b/jhipster/package.json
@@ -79,12 +79,13 @@
     "@angular/localize": "13.3.1",
     "@angular/platform-browser": "13.3.1",
     "@angular/platform-browser-dynamic": "13.3.1",
-    "@angular/router": "13.3.1",
+    "@angular/router": "^11.2.14",
     "@fortawesome/angular-fontawesome": "0.10.2",
     "@fortawesome/fontawesome-svg-core": "6.1.1",
     "@fortawesome/free-solid-svg-icons": "6.1.1",
     "@ng-bootstrap/ng-bootstrap": "12.0.1",
     "@popperjs/core": "2.11.5",
+    "angucomplete-ie8": "^0.1.2",
     "bootstrap": "5.1.3",
     "dayjs": "1.11.0",
     "ng-zorro-antd": "^16.1.0",
